# scout

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
src/scout/: __init__.py  cli.py  config.py  discovery.py  graph.py  llm.py  mock.py  models.py  orchestrator.py  output.py
src/scout/agents/: __init__.py  collector.py  planner.py  synthesizer.py
src/scout/tools/: __init__.py  github_discovery.py  human.py  local_files.py  recommend.py  record.py  registry.py  web_fetch.py  web_search.py
src/scout/tools/osint/: __init__.py  account_tools.py  crypto_tools.py  darkweb_tools.py  domain_tools.py  email_tools.py  geo_tools.py  http_tools.py  instagram_tools.py  news_tools.py  phone_tools.py  recon_tools.py  reddit_tools.py  sanctions_tools.py  scraping_tools.py  scrub_tools.py  spiderfoot_tools.py  surface_tools.py  telegram_tools.py  username_tools.py  vuln_tools.py
