[project]
name = "scout"
version = "0.1.0"
description = "A lightweight, containerized agentic intelligence collector. Give it a mission; it reasons, collects, and maps findings into a graph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.55.0",
    "ddgs>=9.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
    "networkx>=3.3",
    "pyvis>=0.3.2",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
scout = "scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]
